// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Companies Modal should add company to selections and update selectionsControl when the cellClick event is triggered 1`] = `
<pf-add-companies-modal
  addCompaniesErrorSubscription={[Function Subscriber]}
  addCompaniesForm={[Function FormGroup]}
  addCompaniesModalOpen$={[Function Store]}
  addCompaniesModalOpenSubscription={[Function Subscriber]}
  addingCompanies$={[Function Store]}
  addingCompaniesError$={[Function Store]}
  attemptedSubmit="false"
  availableCompaniesLoading$={[Function Store]}
  availableCompaniesLoadingError$={[Function Store]}
  debouncedSearchTerm={[Function Object]}
  exchangeId={[Function Number]}
  fb={[Function FormBuilder]}
  gridState={[Function Object]}
  route={[Function Object]}
  selections={[Function Array]}
  store={[Function Store]}
  view$={[Function Store]}
>
  <pf-modal-form
    class="ng-pristine ng-touched ng-valid"
    ng-reflect-form="[object Object]"
    title="Add Companies"
  >
    
  
    
    
    
  
      
    <pf-async-container>
      
  
        
      <div
        class="form-group"
      >
        
          
        <pf-input-debounce
          id="search-box"
        >
          
          
        </pf-input-debounce>
        
        
      </div>
      
  
        
      <kendo-grid
        class="row-click-selects"
      >
        
  
          
        <kendo-grid-column
          field="CompanyName"
          title="Company Name"
        />
        
  
          
        <kendo-grid-column
          field="Industry"
          title="Industry"
        />
        
  
          
        <kendo-grid-column
          field="Revenue"
          title="Revenue"
        >
          
            
          
          
          
        </kendo-grid-column>
        
  
          
        <kendo-grid-column
          field="FTEs"
          title="FTEs"
        />
        
  
          
        <kendo-grid-column
          field="City"
          title="City"
        />
        
  
          
        <kendo-grid-column
          field="State"
          title="State"
        />
        
  
          
        <kendo-grid-column
          field="Zip"
          title="Zip"
        />
        
  
        
      </kendo-grid>
      
  
      
    </pf-async-container>
    
  
      
    <div
      class="form-group hidden-form-control"
    >
      
        
      <input
        class="form-control ng-pristine ng-touched ng-valid"
        formcontrolname="selections"
        name="hasSelections"
        ng-reflect-name="selections"
        ng-reflect-pf-validatable="false"
        type="hidden"
        value="1"
      />
      
        
      
      
      
    </div>
    
  
    
    
  
  
  </pf-modal-form>
  
  
</pf-add-companies-modal>
`;

exports[`Add Companies Modal should remove company from selections if it has already been added and update selectionsControl
    when the cellClick event is triggered 1`] = `
<pf-add-companies-modal
  addCompaniesErrorSubscription={[Function Subscriber]}
  addCompaniesForm={[Function FormGroup]}
  addCompaniesModalOpen$={[Function Store]}
  addCompaniesModalOpenSubscription={[Function Subscriber]}
  addingCompanies$={[Function Store]}
  addingCompaniesError$={[Function Store]}
  attemptedSubmit="false"
  availableCompaniesLoading$={[Function Store]}
  availableCompaniesLoadingError$={[Function Store]}
  debouncedSearchTerm={[Function Object]}
  exchangeId={[Function Number]}
  fb={[Function FormBuilder]}
  gridState={[Function Object]}
  route={[Function Object]}
  selections={[Function Array]}
  store={[Function Store]}
  view$={[Function Store]}
>
  <pf-modal-form
    class="ng-pristine ng-invalid ng-touched"
    ng-reflect-form="[object Object]"
    title="Add Companies"
  >
    
  
    
    
    
  
      
    <pf-async-container>
      
  
        
      <div
        class="form-group"
      >
        
          
        <pf-input-debounce
          id="search-box"
        >
          
          
        </pf-input-debounce>
        
        
      </div>
      
  
        
      <kendo-grid
        class="row-click-selects"
      >
        
  
          
        <kendo-grid-column
          field="CompanyName"
          title="Company Name"
        />
        
  
          
        <kendo-grid-column
          field="Industry"
          title="Industry"
        />
        
  
          
        <kendo-grid-column
          field="Revenue"
          title="Revenue"
        >
          
            
          
          
          
        </kendo-grid-column>
        
  
          
        <kendo-grid-column
          field="FTEs"
          title="FTEs"
        />
        
  
          
        <kendo-grid-column
          field="City"
          title="City"
        />
        
  
          
        <kendo-grid-column
          field="State"
          title="State"
        />
        
  
          
        <kendo-grid-column
          field="Zip"
          title="Zip"
        />
        
  
        
      </kendo-grid>
      
  
      
    </pf-async-container>
    
  
      
    <div
      class="form-group hidden-form-control"
    >
      
        
      <input
        class="form-control ng-pristine ng-invalid ng-touched"
        formcontrolname="selections"
        name="hasSelections"
        ng-reflect-name="selections"
        ng-reflect-pf-validatable="false"
        type="hidden"
        value=""
      />
      
        
      
      
      
    </div>
    
  
    
    
  
  
  </pf-modal-form>
  
  
</pf-add-companies-modal>
`;

exports[`Add Companies Modal should show a modal with a search bar and a companies grid when addCompaniesModalOpen$ is true 1`] = `
<pf-add-companies-modal
  addCompaniesErrorSubscription={[Function Subscriber]}
  addCompaniesForm={[Function FormGroup]}
  addCompaniesModalOpen$={[Function ScalarObservable]}
  addCompaniesModalOpenSubscription={[Function Subscriber]}
  addingCompanies$={[Function Store]}
  addingCompaniesError$={[Function Store]}
  attemptedSubmit="false"
  availableCompaniesLoading$={[Function Store]}
  availableCompaniesLoadingError$={[Function Store]}
  debouncedSearchTerm={[Function Object]}
  exchangeId={[Function Number]}
  fb={[Function FormBuilder]}
  gridState={[Function Object]}
  route={[Function Object]}
  selections={[Function Array]}
  store={[Function Store]}
  view$={[Function Store]}
>
  <pf-modal-form
    class="ng-untouched ng-pristine ng-invalid"
    ng-reflect-form="[object Object]"
    title="Add Companies"
  >
    
  
    
    
    
  
      
    <pf-async-container>
      
  
        
      <div
        class="form-group"
      >
        
          
        <pf-input-debounce
          id="search-box"
        >
          
          
        </pf-input-debounce>
        
        
      </div>
      
  
        
      <kendo-grid
        class="row-click-selects"
      >
        
  
          
        <kendo-grid-column
          field="CompanyName"
          title="Company Name"
        />
        
  
          
        <kendo-grid-column
          field="Industry"
          title="Industry"
        />
        
  
          
        <kendo-grid-column
          field="Revenue"
          title="Revenue"
        >
          
            
          
          
          
        </kendo-grid-column>
        
  
          
        <kendo-grid-column
          field="FTEs"
          title="FTEs"
        />
        
  
          
        <kendo-grid-column
          field="City"
          title="City"
        />
        
  
          
        <kendo-grid-column
          field="State"
          title="State"
        />
        
  
          
        <kendo-grid-column
          field="Zip"
          title="Zip"
        />
        
  
        
      </kendo-grid>
      
  
      
    </pf-async-container>
    
  
      
    <div
      class="form-group hidden-form-control"
    >
      
        
      <input
        class="form-control ng-untouched ng-pristine ng-invalid"
        formcontrolname="selections"
        name="hasSelections"
        ng-reflect-name="selections"
        ng-reflect-pf-validatable="false"
        type="hidden"
        value=""
      />
      
        
      
      
      
    </div>
    
  
    
    
  
  
  </pf-modal-form>
  
  
</pf-add-companies-modal>
`;
